tests/rascal/negative/name_errors/L2/7_undecl-for1.ob
MODULE Bla;




BEGIN
  FOR x := 1 TO 2 DO
    x := 1
  END
END Bla.